refactor line list \
