# src/shared/generated/swagger.json
@@ -1329,6 +1329,36 @@
 			}
 		},
 		"/api/lines/{id}": {
+			"get": {
+				"operationId": "GetOne",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_ALAssLine_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Lines"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			},
 			"patch": {
 				"operationId": "Update",
 				"responses": {
